Fix carret visibility in form area

--- a/frontend/reelminder/src/styles.css
+++ b/frontend/reelminder/src/styles.css
@@ -5,7 +5,6 @@ body {
   caret-color: transparent;
 }
 input,
-textarea,
-form {
+textarea {
   caret-color: black !important;
 }
